# vetiver-python

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .python-version  404.html  LICENSE  MAINTAINERS.md  MANIFEST.in  Makefile  Pipfile  README.md  docker-compose.yml  environment.pickle  genindex.html  index.doctree  index.html  index.rst.txt  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  tox.ini  vetiver.html
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: ci.yml  docs.yml  precommit.yml  tests.yml  weekly.yml
_build/doctrees/: environment.pickle  index.doctree
_build/html/: index.html  objects.inv  searchindex.js
_sources/: vetiver.rst.txt
_sources/reference/: vetiver.VetiverModel.rst.txt  vetiver.write_docker.rst.txt
_static/: documentation_options.js
advancedusage/: custom_handler.doctree  custom_handler.html
docs/: .gitignore  Makefile  _environment  _quarto-stable.yml  _quarto.yml  _sidebar.yml  changelog.md  custom_code.qmd  custom_elements.qmd  custom_handler.md  index.qmd  mkdocs.yml  objects.json  style.css  version_config.py
docs/docs/: examples.md  get-started.md  index.md  vetiver-api.md  vetiver-model.md
docs/source/: conf.py  index.rst  modules.rst
examples/: coffeeratings.py  index.html  sacramento.py
examples/coffeeratings/: Dockerfile  app.py  coffeeratings.py  vetiver_req.txt  vetiver_requirements.txt
get-started/: index.html
github.ref_name/: index.html  objects.inv  search.html
github.ref_name/advancedusage/: custom_handler.doctree
github.ref_name/reference/: vetiver.SKLearnHandler.html  vetiver.TorchHandler.doctree  vetiver.VetiverAPI.html  vetiver.VetiverAPI.run.html  vetiver.XGBoostHandler.html  vetiver.compute_metrics.html  vetiver.load_pkgs.html  vetiver.pin_metrics.html  vetiver.pin_read_write.vetiver_pin_read.html  vetiver.plot_metrics.html  vetiver.vetiver_create_ptype.doctree  vetiver.vetiver_create_ptype.html  vetiver.vetiver_endpoint.doctree  vetiver.vetiver_pin_write.html  vetiver.vetiver_write_app.html
main/: .buildinfo  BaseHandler.html  SKLearnHandler.html  StatsmodelsHandler.html  TorchHandler.html  VetiverAPI.html  VetiverAPI.run.html  VetiverAPI.vetiver_post.html  VetiverModel.html  XGBoostHandler.html  changelog.html  compute_metrics.html  custom_code.html  custom_handler.html  deploy_rsconnect.html  environment.pickle  genindex.html  index.doctree  index.html  model_card.model_card.html  objects.inv  pin_metrics.html  plot_metrics.html  predict.html  prepare_docker.html  search.html  search.json  searchindex.js  vetiver_create_prototype.html  vetiver_endpoint.html  vetiver_pin_write.html  write_app.html  write_docker.write_docker.html
main/_sources/: index.rst.txt
main/_static/: documentation_options.js
main/advancedusage/: custom_handler.html
main/changelog/: index.doctree  index.html
main/reference/: BaseHandler.html  SKLearnHandler.html  SpacyHandler.html  StatsmodelsHandler.html  TorchHandler.html  VetiverAPI.html  VetiverAPI.run.html  VetiverAPI.vetiver_post.html  VetiverModel.html  XGBoostHandler.html  compute_metrics.html  deploy_rsconnect.html  index.html  model_card.model_card.html  pin_metrics.html  plot_metrics.html  predict.html  prepare_docker.html  templates.model_card.html  templates.monitoring_dashboard.html  vetiver.BaseHandler.doctree  vetiver.BaseHandler.html  vetiver.SKLearnHandler.doctree  vetiver.SKLearnHandler.html  vetiver.StatsmodelsHandler.doctree  vetiver.StatsmodelsHandler.html  vetiver.TorchHandler.doctree  vetiver.TorchHandler.html  vetiver.VetiverAPI.doctree  vetiver.VetiverAPI.html  vetiver.VetiverAPI.run.doctree  vetiver.VetiverAPI.run.html  vetiver.VetiverAPI.vetiver_post.doctree  vetiver.VetiverAPI.vetiver_post.html  vetiver.VetiverModel.doctree  vetiver.VetiverModel.html  vetiver.XGBoostHandler.doctree  vetiver.XGBoostHandler.html  vetiver.compute_metrics.doctree  vetiver.compute_metrics.html  (+31 more)
reference/: vetiver.VetiverAPI.doctree  vetiver.VetiverAPI.html  vetiver.VetiverAPI.run.doctree  vetiver.VetiverAPI.run.html  vetiver.VetiverAPI.vetiver_post.doctree  vetiver.VetiverAPI.vetiver_post.html  vetiver.VetiverModel.doctree  vetiver.VetiverModel.html  vetiver.compute_metrics.doctree  vetiver.compute_metrics.html  vetiver.load_pkgs.html  vetiver.pin_metrics.doctree  vetiver.pin_metrics.html  vetiver.pin_read_write.vetiver_pin_read.doctree  vetiver.pin_read_write.vetiver_pin_read.html  vetiver.pin_read_write.vetiver_pin_write.doctree  vetiver.pin_read_write.vetiver_pin_write.html  vetiver.plot_metrics.html  vetiver.predict.doctree  vetiver.predict.html  vetiver.vetiver_endpoint.doctree  vetiver.vetiver_endpoint.html  vetiver.vetiver_write_app.doctree  vetiver.vetiver_write_app.html  vetiver.vetiver_write_docker.doctree  vetiver.vetiver_write_docker.html  vetiver.write_app.doctree  vetiver.write_app.html  vetiver.write_docker.doctree  vetiver.write_docker.html
requirements/: dev.txt
script/setup-docker/: .gitignore  app.py  (+2 more)
search/: search_index.json
source/: conf.py
v0.1.6/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.1.7/: .buildinfo  environment.pickle  genindex.html
v0.1.8/: .buildinfo  environment.pickle  genindex.html  index.html  search.html
v0.2.0/: .buildinfo  environment.pickle  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.2.1/: index.html
v0.2.2/: changelog.html  search.json
v0.2.3/: custom_handler.html  search.json
v0.2.4/: changelog.html  custom_code.html  search.json
v0.2.5/: custom_code.html  index.html  search.json
v0.2.6/: _styles-quartodoc.css  search.json
vetiver/: __init__.py  attach_pkgs.py  dummy.py  helpers.py  meta.py  mock.py  model_card.py  monitor.py  pin_read_write.py  prototype.py  ptype.py  rsconnect.py  server.py  templates.py  types.py  utils.py  vetiver_model.py  write_docker.py  write_fastapi.py
vetiver-api/: index.html
vetiver-model/: index.html
vetiver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+430 files in other folders)
