[build-system]
requires = [
    "setuptools>=59",
    "setuptools_scm[toml]>=6.4",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["vetiver"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"
markers = [
    "rsc_test: tests for rstudio connect",
    "docker: tests for docker deployments"
]

[tool.setuptools_scm]
fallback_version = "999"
version_scheme = 'post-release'
