[metadata]
name = vetiver
version = 0.1.5
description = Deploy models into REST endpoints
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isabelizimm/vetiver-python
author = Isabel Zimmerman
author_email = isabel.zimmerman@rstudio.com
license = MIT
keywords = data, mlops
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
include_package_data = True
zipsafe = False

python_requires = >=3.7
install_requires =
    numpy
    pandas
    fastapi
    pydantic
    joblib
    uvicorn
    scikit-learn
    nest-asyncio
    requests
    pins
    rsconnect-python
    plotly
    importlib-metadata>=4.4  # NOTE: Remove when python_requires>=3.8

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-snapshot
    sphinx
    sphinx-autodoc-typehints
    sphinx-book-theme
    myst-parser

torch =
    torch
