[metadata]
name = vetiver
description = Version, share, deploy, and monitor models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rstudio/vetiver-python
author = Isabel Zimmerman
author_email = isabel.zimmerman@posit.co
license = MIT
keywords = data, mlops
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
include_package_data = True
zipsafe = False

python_requires = >=3.7
install_requires =
    numpy
    pandas
    fastapi
    pydantic
    joblib
    uvicorn
    scikit-learn
    nest-asyncio
    requests
    pins
    rsconnect-python>=1.8.0
    plotly
    pip-tools
    httpx
    importlib-metadata>=4.4  # NOTE: Remove when python_requires>=3.8

[options.extras_require]
all =
    vetiver[dev]
    vetiver[all_models]
    vetiver[docs]

all_models =
    vetiver[torch]
    vetiver[statsmodels]
    vetiver[xgboost]
    vetiver[spacy]

dev =
    pytest
    pytest-cov
    pytest-snapshot
    vetiver[typecheck]

docs =
    quartodoc
    griffe==0.25.1

statsmodels =
    statsmodels

torch =
    torch

xgboost =
    xgboost

spacy =
    spacy

typecheck =
    pyright
    pandas-stubs
