[metadata]
name = vetiver
description = Version, share, deploy, and monitor models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rstudio/vetiver-python
author = Isabel Zimmerman
author_email = isabel.zimmerman@posit.co
license = MIT
keywords = data, mlops
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
include_package_data = True
zipsafe = False

python_requires = >=3.8
install_requires =
    numpy
    pandas
    fastapi
    pydantic
    joblib
    uvicorn
    scikit-learn
    nest-asyncio
    requests
    pins>=0.7.1
    rsconnect-python>=1.11.0
    python-dotenv
    plotly
    pip-tools
    httpx


[options.extras_require]
all =
    vetiver[dev]
    vetiver[all_models]
    vetiver[docs]

all_models =
    vetiver[torch]
    vetiver[statsmodels]
    vetiver[xgboost]
    vetiver[spacy]

dev =
    pytest
    pytest-cov
    pytest-snapshot
    vetiver[typecheck]

docs =
    quartodoc
    griffe

statsmodels =
    statsmodels

torch =
    torch

xgboost =
    xgboost

spacy =
    spacy

typecheck =
    pyright
    pandas-stubs
